# repofail

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RULES.md  contract.json  install.sh  pyproject.toml  test-bot-v2.md  test-ui.md  test-v3.md
.github/actions/repofail/: README.md  action.yml
.github/workflows/: publish.yml  repofail.yml
Formula/: repofail.rb
docs/: QUICKSTART.md
github-app/: .gitignore  Dockerfile  README.md  app-manifest.json  app.py  auth.py  comment.py  requirements.txt  test_comment.py
repofail/: __init__.py  ai.py  cli.py  contract.py  engine.py  fleet.py  format.py  init.py  lock.py  models.py  risk.py  telemetry.py
repofail/rules/: __init__.py  abi_wheel_mismatch.py  apple_silicon.py  base.py  docker_only.py  go_version.py  gpu_memory.py  info_signals.py  lock_file_missing.py  ml_niche.py  native_toolchain.py  node_engine.py  node_eol.py  node_windows.py  port_collision.py  python_eol.py  python_version.py  registry.py  rust_compat.py  spec_drift.py  system_libs.py  torch_cuda.py  yaml_loader.py
repofail/scanner/: __init__.py  ast_scan.py  host.py  parsers.py  repo.py
tests/: test_ai.py  test_cli_stage2.py  test_contract.py  test_fleet.py  test_integration.py  test_ml_rules.py  test_rules.py  test_scanner.py  test_telemetry.py
