[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repofail"
version = "0.2.5"
description = "Predict why a repository will fail on your machine before you run it."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jayanth" }]
dependencies = [
    "typer>=0.9.0",
    "tomli>=2.0; python_version < '3.11'",
    "pyyaml>=6.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
repofail = "repofail.cli:_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.sdist]
exclude = [".venv-check", ".venv-check/**", "testenv", "testenv/**", ".venv", ".venv/**", "venv", "venv/**"]

